@@ -509,6 +509,7 @@ datadir/Common_Content/common/en-US/css/common.css
 datadir/Common_Content/common/en-US/css/default.css
 datadir/Common_Content/common/en-US/css/epub.css
 datadir/Common_Content/common/en-US/css/pdf.css
+datadir/Common_Content/common/en-US/css/pdfmain.css
 datadir/Common_Content/common/en-US/css/print.css
 datadir/Common_Content/common/en-US/Feedback.xml
 datadir/Common_Content/common/en-US/images/1.png
