@@ -4,6 +4,6 @@
 <!ENTITY HOLDER "Red Hat, Inc">
 <!ENTITY YEAR "2013">
 <!ENTITY D_B "DocBook">
-<!ENTITY PRODUCTNUM "4.0">
+<!ENTITY PRODUCTNUM "4.1">
 <!ENTITY BOOKNAME "Users_Guide">
 <!ENTITY DOCBOOK-URL "http://www.docbook.org/tdg/en/html/docbook.html">
