@@ -4,7 +4,6 @@
 chunk_first: 0
 debug: 1
 xml_lang: en-US
-chunk_section_depth: 0
 tmp_dir: build
 docname: Users_Guide
 #dtdver: 5.0
