@@ -20,12 +20,16 @@
 	  }
 [%- END %]
           body {
-	    font-family: "liberation sans", "Myriad ", "Bitstream Vera Sans", "Lucida Grande", "Luxi Sans", "Trebuchet MS", helvetica, verdana, arial, sans-serif;
+	    font-family: 'Liberation Sans';
 	  }
+[%- IF chunk_section_depth -%]
+[% USE String('li ') %]
+	  body ul li li [% String.repeat(chunk_section_depth)  %]{ display: none; }
+[%- END %]
           h1 {
             text-align: center;
             font-size: 20px;
-            font-family: sans-serif;
+            font-family: 'Liberation Sans';
             font-weight: bold;
           }
           span.page {
@@ -43,7 +47,7 @@
           }
           ul {
             font-size: 14px;
-            font-family: sans-serif;
+            font-family: 'Liberation Sans';
             overflow-x: hidden;
             padding-left: 0em;
           }
